--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="dist/output.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;400&display=swap" rel="stylesheet" />
   </head>
   <body>
@@ -36,11 +37,11 @@
                   <a href="#portfolio" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Portfolio</a>
                 </li>
                 <li class="group">
-                  <a href="#clients" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Clients</a>
+                  <a href="#services" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Services</a>
                 </li>
-                <li class="group">
+                <!-- <li class="group">
                   <a href="#blog" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Blog</a>
-                </li>
+                </li> -->
                 <li class="group">
                   <a href="#contact" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Contact</a>
                 </li>
@@ -115,12 +116,12 @@
     <!-- Hero Section End -->
 
     <!-- About Section Start -->
-    <section id="about" class="pt-36 pb-32">
+    <section id="about" class="pt-36">
       <div class="container">
         <div class="flex flex-wrap">
           <div class="w-full px-6 mb-10 lg:w-1/2">
             <h4 class="font-semibold uppercase text-primary text-lg mb-4 lg:hidden">Tentang Saya</h4>
-            <img src="https://source.unsplash.com/300x180?profile" alt="image" class="w-full rounded-xl shadow-lg overflow-hidden duration-500 hover:brightness-100 brightness-75" />
+            <img src="https://source.unsplash.com/300x180?profile" alt="image" class="w-full max-w-md rounded-xl shadow-lg overflow-hidden duration-500 hover:brightness-100 brightness-75" />
             <!-- <h2 class="font-bold text-dark text-3xl mb-5 max-w-lg lg:text-4xl">
               Mohamad Handika Nurfadli
             </h2>
@@ -139,6 +140,31 @@
           </div>
         </div>
       </div>
+      <div class="w-full px-4 bg-dark mt-14">
+        <div class="flex flex-wrap items-center justify-center">
+          <span class="max-w-[60px] mx-4 py-10 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+            <img src="dist/img/clients/html.png" alt="google" />
+          </span>
+          <span class="max-w-[60px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+            <img src="dist/img/clients/css.png" alt="google" />
+          </span>
+          <span class="max-w-[60px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+            <img src="dist/img/clients/js.png" alt="google" />
+          </span>
+          <span class="max-w-[60px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+            <img src="dist/img/clients/php.png" alt="google" />
+          </span>
+          <span class="max-w-[60px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+            <img src="dist/img/clients/bs.png" alt="google" />
+          </span>
+          <span class="max-w-[60px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+            <img src="dist/img/clients/tw.png" alt="google" />
+          </span>
+          <span class="max-w-[60px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+            <img src="dist/img/clients/lv.png" alt="google" />
+          </span>
+        </div>
+      </div>
     </section>
     <!-- About Section End -->
 
@@ -150,68 +176,78 @@
             <p class="font-medium text-md text-grey"></p>
             <h4 class="font-semibold uppercase text-primary text-lg mb-2">Portfolio</h4>
             <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Project Terbaru</h2>
-            <p class="font-medium text-md text-grey md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum ipsum dolorem amet corporis voluptates necessitatibus.</p>
+            <p class="font-medium text-md text-grey md:text-lg">Ini adalah hasil dari project dan tugas selama saya kuliah.</p>
           </div>
         </div>
         <div class="w-full p-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
           <div class="mb-12 p-4 md:w-1/2">
-            <div class="rounded-md shadow-md overflow-hidden">
+            <div class="rounded-md shadow-md overflow-hidden hover:scale-110 duration-500">
               <img src="dist/img/portfolio/3.jpg" alt="image" width="w-full" />
             </div>
-            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Perpustakaan UCIC</h3>
-            <p class="font-medium text-base text-grey">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo incidunt at eum?</p>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a href="https://github.com/handikaFadli/project-perpustakaan" class="hover:text-primary truncate">Perpustakaan UCIC</a></h3>
+            <p class="font-medium text-base text-grey">Ini adalah project UTS saya pada semester 3, disini saya membuat website Perpustakaan Universitas Catur Insan Cendikia karena terinspirasi dari sistem perpustakaan yang ada di kampus saya.</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
-            <div class="rounded-md shadow-md overflow-hidden">
+            <div class="rounded-md shadow-md overflow-hidden hover:scale-110 duration-500">
               <img src="dist/img/portfolio/1.jpg" alt="image" width="w-full" />
             </div>
-            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Pengelolaan Bahan Baku dan Pendistribusian Pt. Bread Smile</h3>
-            <p class="font-medium text-base text-grey">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo incidunt at eum?</p>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a href="https://github.com/handikaFadli/project-perpustakaan" class="hover:text-primary truncate">Pt. Bread Smile</a></h3>
+            <p class="font-medium text-base text-grey">Ini adalah project UAS saya pada semester 3, disini saya dan 3 teman saya membuat sistem pengelolaan bahan baku dan pendistribusian pada PT. Bread Smile.</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
-            <div class="rounded-md shadow-md overflow-hidden">
+            <div class="rounded-md shadow-md overflow-hidden hover:scale-110 duration-500">
               <img src="dist/img/portfolio/2.jpg" alt="image" width="w-full" />
             </div>
-            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">UMKM Tahu Bakso Sambal Kecap Jani</h3>
-            <p class="font-medium text-base text-grey">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo incidunt at eum?</p>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a href="https://github.com/handikaFadli/project-perpustakaan" class="hover:text-primary truncate">Tahu Bakso Sambal Kecap Jani</a></h3>
+            <p class="font-medium text-base text-grey">Ini adalah project UAS saya pada semester 3, disini saya membuat website untuk UMKM Tahu Bakso Sambal Kecap Jani.</p>
           </div>
         </div>
       </div>
     </section>
     <!-- Portfolio Section End -->
 
-    <!-- Clients Section Start -->
-    <section id="clients" class="pt-36 pb-32 bg-slate-800">
+    <!-- Services Section Start -->
+    <section id="services" class="pt-36 pb-32 bg-dark">
       <div class="container">
         <div class="w-full p-4">
           <div class="mx-auto text-center mb-16">
-            <h4 class="font-semibold uppercase text-primary text-lg mb-2">Clients</h4>
-            <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl">Yang Pernah Bekerjasama</h2>
-            <p class="font-medium text-md text-grey md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum ipsum dolorem amet corporis voluptates necessitatibus.</p>
+            <h4 class="font-semibold uppercase text-primary text-lg mb-2">Services</h4>
+            <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl">Apa yang saya tawarkan?</h2>
+            <p class="font-medium text-md text-grey md:text-lg">Tujuan saya adalah membuat situs web yang memperkuat merek perusahaan anda sekaligus memastikan kemudahan penggunaan dan kesederhanaan bagi audiens.</p>
           </div>
         </div>
-        <div class="w-full px-4">
-          <div class="flex flex-wrap items-center justify-center">
-            <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-              <img src="dist/img/clients/google1.png" alt="google" />
-            </a>
-            <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-              <img src="dist/img/clients/tokopedia.png" alt="google" />
-            </a>
-            <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-              <img src="dist/img/clients/traveloka1.png" alt="google" />
-            </a>
-            <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-              <img src="dist/img/clients/gojek.png" alt="google" />
-            </a>
+        <div class="flex flex-wrap justify-evenly">
+          <div class="w-full px-4 lg:w-1/3">
+            <div class="bg-slate-800 rounded-xl mb-10">
+              <div class="py-8 px-6 items-center text-center lg:items-start lg:text-start">
+                <span class="text-primary"><i class="fa-regular fa-window-restore w-8 h-8"></i></span>
+                <h3>
+                  <span class="block mt-8 mb-2 font-semibold text-xl text-white"> Web Design </span>
+                </h3>
+                <p class="text-base font-medium text-grey mb-3">Saya biasa membuat website interaktif untuk individu dan UMKM.</p>
+                <!-- <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80">Baca Selengkapnya</a> -->
+              </div>
+            </div>
+          </div>
+          <div class="w-full px-4 lg:w-1/3">
+            <div class="bg-slate-800 rounded-xl mb-10">
+              <div class="py-8 px-6 items-center text-center lg:items-start lg:text-start">
+                <span class="text-primary"><i class="fa-solid fa-gear w-8 h-8"></i></span>
+                <h3>
+                  <span class="block mt-8 mb-2 font-semibold text-xl text-white"> Web Development </span>
+                </h3>
+                <p class="text-base font-medium text-grey mb-3">Saya biasa membuat website interaktif untuk individu dan UMKM.</p>
+                <!-- <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80">Baca Selengkapnya</a> -->
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- Clients Section End -->
+    <!-- Services Section End -->
 
     <!-- Blog Section Start -->
-    <section id="blog" class="pt-36 pb-32 bg-slate-100">
+    <!-- <section id="blog" class="pt-36 pb-32 bg-slate-100">
       <div class="container">
         <div class="w-full p-4">
           <div class="max-w-xl mx-auto text-center mb-16">
@@ -224,7 +260,7 @@
         <div class="flex flex-wrap justify-evenly">
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
             <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
-              <img src="https://source.unsplash.com/360x200?programming" alt="image" class="w-full" />
+              <img src="dist/img/portfolio/3.jpg" alt="image" class="w-full" />
               <div class="py-8 px-6">
                 <h3>
                   <a href="#" class="block mb-2 font-semibold text-xl text-dark hover:text-primary truncate"> Software Development </a>
@@ -236,7 +272,7 @@
           </div>
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
             <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
-              <img src="https://source.unsplash.com/360x200?programming" alt="image" class="w-full" />
+              <img src="dist/img/portfolio/1.jpg" alt="image" class="w-full" />
               <div class="py-8 px-6">
                 <h3>
                   <a href="#" class="block mb-2 font-semibold text-xl text-dark hover:text-primary truncate"> Mobile development </a>
@@ -248,7 +284,7 @@
           </div>
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
             <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
-              <img src="https://source.unsplash.com/360x200?programming" alt="image" class="w-full" />
+              <img src="dist/img/portfolio/2.jpg" alt="image" class="w-full" />
               <div class="py-8 px-6">
                 <h3>
                   <a href="#" class="block mb-2 font-semibold text-xl text-dark hover:text-primary truncate"> Web Development </a>
@@ -272,7 +308,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Blog Section End -->
 
     <!-- Contact Section Start -->
@@ -283,22 +319,22 @@
             <p class="font-medium text-md text-grey"></p>
             <h4 class="font-semibold uppercase text-primary text-lg mb-2">Contact</h4>
             <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Hubungi Kami</h2>
-            <p class="font-medium text-md text-grey md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum ipsum dolorem amet corporis voluptates necessitatibus.</p>
+            <p class="font-medium text-md text-grey md:text-lg">Jika ada pertanyaan, anda dapat mengirim pesan dibawah ini.</p>
           </div>
         </div>
         <form action="">
           <div class="w-full lg:w-2/3 lg:mx-auto">
             <div class="w-full px-4 mb-8">
-              <label for="name" class="text-base text-dark font-bold">Nama</label>
-              <input type="text" name="name" id="name" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary" />
+              <!-- <label for="name" class="text-base text-dark font-bold">Nama</label> -->
+              <input type="text" name="name" id="name" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary" placeholder="Nama" />
             </div>
             <div class="w-full px-4 mb-8">
-              <label for="email" class="text-base text-dark font-bold">Email</label>
-              <input type="email" name="email" id="email" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary" />
+              <!-- <label for="email" class="text-base text-dark font-bold">Email</label> -->
+              <input type="email" name="email" id="email" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary" placeholder="Email" />
             </div>
             <div class="w-full px-4 mb-8">
-              <label for="pesan" class="text-base text-dark font-bold">Pesan</label>
-              <textarea name="pesan" id="pesan" class="w-full h-32 bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary"></textarea>
+              <!-- <label for="pesan" class="text-base text-dark font-bold">Pesan</label> -->
+              <textarea name="pesan" id="pesan" class="w-full h-32 bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary" placeholder="Pesan"></textarea>
             </div>
             <div class="w-full px-4">
               <button class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full w-full hover:opacity-80 hover:shadow-lg transition duration-500">Kirim</button>
@@ -310,9 +346,9 @@
     <!-- Contact Section End -->
 
     <!-- Footer Start -->
-    <footer class="bg-dark pt-24 pb-12">
+    <footer class="bg-dark pt-20 pb-12">
       <div class="container">
-        <div class="flex flex-wrap">
+        <!-- <div class="flex flex-wrap">
           <div class="w-full px-4 mb-12 text-slate-300 font-medium md:w-1/3">
             <h2 class="font-bold text-4xl mb-5 text-white">WPU</h2>
             <h3 class="font-bold text-2xl mb-2">Hubungi Kami</h3>
@@ -360,8 +396,8 @@
               </li>
             </ul>
           </div>
-        </div>
-        <div class="w-full pt-10 border-t border-slate-700">
+        </div> -->
+        <div class="w-full">
           <div class="flex items-center justify-center mb-5">
             <!-- Instagram -->
             <a href="https://www.instagram.com/hand1kaa_" target="_blank" class="icon-sosmed-footer">
@@ -384,6 +420,14 @@
               <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <title>Twitter</title>
                 <path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z" />
+              </svg>
+            </a>
+
+            <!-- Github -->
+            <a href="https://github.com/handikaFadli" target="_blank" class="icon-sosmed-footer">
+              <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <title>GitHub</title>
+                <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
               </svg>
             </a>
           </div>
