--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;400&display=swap" rel="stylesheet" />
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <!-- Header Start -->
@@ -54,7 +56,7 @@
     <!-- Header End -->
 
     <!-- Hero Section Start -->
-    <section id="home" class="pt-36">
+    <section id="home" class="home pt-36">
       <div class="container">
         <div class="flex flex-wrap">
           <div class="w-full self-center px-4 lg:w-1/2">
@@ -62,7 +64,7 @@
               Hai Guys 👋, saya
               <span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl">Mohamad Handika</span>
             </h1>
-            <h2 class="font-medium text-grey text-lg mb-5 lg:text-2xl">Mahasiswa & <span class="text-dark">Programmer</span></h2>
+            <h2 class="font-medium text-grey text-lg mb-5 lg:text-2xl">Mahasiswa & <span class="text-dark"></span></h2>
             <p class="font-medium text-grey mb-10 leading-relaxed">Selamat datang di portfolio saya, eksplorasi karya-karya terbaik saya.</p>
 
             <a href="https://api.whatsapp.com/send/?phone=+6282128737963&text=Halo" target="_blank" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">Hubungi Saya</a>
@@ -119,9 +121,9 @@
     <section id="about" class="pt-36">
       <div class="container">
         <div class="flex flex-wrap">
-          <div class="w-full px-6 mb-10 lg:w-1/2">
-            <h4 class="font-semibold uppercase text-primary text-lg mb-4 lg:hidden">Tentang Saya</h4>
-            <img src="https://source.unsplash.com/300x180?profile" alt="image" class="w-full max-w-md rounded-xl shadow-lg overflow-hidden duration-500 hover:brightness-100 brightness-75" />
+          <div class="w-full px-6 mb-14 lg:w-1/2">
+            <h4 class="font-semibold uppercase text-primary text-lg mb-8 lg:hidden">Tentang Saya</h4>
+            <img src="https://source.unsplash.com/300x180?profile" alt="image" class="w-full max-w-md rounded-xl shadow-lg overflow-hidden duration-500 hover:brightness-100 brightness-75" data-aos="fade-right" data-aos-delay="80" data-aos-duration="2100" />
             <!-- <h2 class="font-bold text-dark text-3xl mb-5 max-w-lg lg:text-4xl">
               Mohamad Handika Nurfadli
             </h2>
@@ -130,7 +132,7 @@
               suscipit cumque hic. Fugiat aperiam eligendi ab?
             </p> -->
           </div>
-          <div class="w-full px-4 lg:w-1/2">
+          <div class="w-full px-4 lg:w-1/2" data-aos="fade-left" data-aos-delay="120" data-aos-duration="2100">
             <h4 class="font-semibold uppercase text-primary text-lg mb-2 hidden lg:flex">Tentang Saya</h4>
             <h3 class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-4">Mohamad Handika Nurfadli</h3>
             <p class="font-medium text-base text-grey mb-6 lg:text-lg leading-relaxed">
@@ -142,25 +144,25 @@
       </div>
       <div class="w-full px-4 bg-dark mt-14">
         <div class="flex flex-wrap items-center justify-center">
-          <span class="max-w-[60px] mx-4 py-10 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+          <span class="max-w-[60px] mx-4 py-8 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
             <img src="dist/img/clients/html.png" alt="google" />
           </span>
-          <span class="max-w-[60px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+          <span class="max-w-[60px] mx-4 py-8 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
             <img src="dist/img/clients/css.png" alt="google" />
           </span>
-          <span class="max-w-[60px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+          <span class="max-w-[60px] mx-4 py-8 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
             <img src="dist/img/clients/js.png" alt="google" />
           </span>
-          <span class="max-w-[60px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+          <span class="max-w-[60px] mx-4 py-8 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
             <img src="dist/img/clients/php.png" alt="google" />
           </span>
-          <span class="max-w-[60px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+          <span class="max-w-[60px] mx-4 py-8 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
             <img src="dist/img/clients/bs.png" alt="google" />
           </span>
-          <span class="max-w-[60px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+          <span class="max-w-[60px] mx-4 py-8 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
             <img src="dist/img/clients/tw.png" alt="google" />
           </span>
-          <span class="max-w-[60px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+          <span class="max-w-[60px] mx-4 py-8 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
             <img src="dist/img/clients/lv.png" alt="google" />
           </span>
         </div>
@@ -172,7 +174,7 @@
     <section id="portfolio" class="pt-36 pb-16 bg-slate-100">
       <div class="container">
         <div class="w-full p-4">
-          <div class="max-w-xl mx-auto text-center mb-16">
+          <div class="max-w-xl mx-auto text-center mb-16" data-aos="fade-up" data-aos-delay="50" data-aos-duration="2100">
             <p class="font-medium text-md text-grey"></p>
             <h4 class="font-semibold uppercase text-primary text-lg mb-2">Portfolio</h4>
             <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Project Terbaru</h2>
@@ -180,21 +182,21 @@
           </div>
         </div>
         <div class="w-full p-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
-          <div class="mb-12 p-4 md:w-1/2">
+          <div class="mb-12 p-4 md:w-1/2" data-aos="fade-up" data-aos-delay="80" data-aos-duration="2100">
             <div class="rounded-md shadow-md overflow-hidden hover:scale-110 duration-500">
               <img src="dist/img/portfolio/3.jpg" alt="image" width="w-full" />
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a href="https://github.com/handikaFadli/project-perpustakaan" class="hover:text-primary truncate">Perpustakaan UCIC</a></h3>
             <p class="font-medium text-base text-grey">Ini adalah project UTS saya pada semester 3, disini saya membuat website Perpustakaan Universitas Catur Insan Cendikia karena terinspirasi dari sistem perpustakaan yang ada di kampus saya.</p>
           </div>
-          <div class="mb-12 p-4 md:w-1/2">
+          <div class="mb-12 p-4 md:w-1/2" data-aos="fade-up" data-aos-delay="80" data-aos-duration="2100">
             <div class="rounded-md shadow-md overflow-hidden hover:scale-110 duration-500">
               <img src="dist/img/portfolio/1.jpg" alt="image" width="w-full" />
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a href="https://github.com/handikaFadli/project-perpustakaan" class="hover:text-primary truncate">Pt. Bread Smile</a></h3>
             <p class="font-medium text-base text-grey">Ini adalah project UAS saya pada semester 3, disini saya dan 3 teman saya membuat sistem pengelolaan bahan baku dan pendistribusian pada PT. Bread Smile.</p>
           </div>
-          <div class="mb-12 p-4 md:w-1/2">
+          <div class="mb-12 p-4 md:w-1/2" data-aos="fade-up" data-aos-delay="80" data-aos-duration="2100">
             <div class="rounded-md shadow-md overflow-hidden hover:scale-110 duration-500">
               <img src="dist/img/portfolio/2.jpg" alt="image" width="w-full" />
             </div>
@@ -210,7 +212,7 @@
     <section id="services" class="pt-36 pb-32 bg-dark">
       <div class="container">
         <div class="w-full p-4">
-          <div class="mx-auto text-center mb-16">
+          <div class="mx-auto text-center mb-16" data-aos="fade-up" data-aos-delay="50" data-aos-duration="2100">
             <h4 class="font-semibold uppercase text-primary text-lg mb-2">Services</h4>
             <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl">Apa yang saya tawarkan?</h2>
             <p class="font-medium text-md text-grey md:text-lg">Tujuan saya adalah membuat situs web yang memperkuat merek perusahaan anda sekaligus memastikan kemudahan penggunaan dan kesederhanaan bagi audiens.</p>
@@ -218,7 +220,7 @@
         </div>
         <div class="flex flex-wrap justify-evenly">
           <div class="w-full px-4 lg:w-1/3">
-            <div class="bg-slate-800 rounded-xl mb-10">
+            <div class="bg-slate-800 rounded-xl mb-10" data-aos="fade-up-right" data-aos-delay="80" data-aos-duration="2100">
               <div class="py-8 px-6 items-center text-center lg:items-start lg:text-start">
                 <span class="text-primary"><i class="fa-regular fa-window-restore w-8 h-8"></i></span>
                 <h3>
@@ -230,7 +232,7 @@
             </div>
           </div>
           <div class="w-full px-4 lg:w-1/3">
-            <div class="bg-slate-800 rounded-xl mb-10">
+            <div class="bg-slate-800 rounded-xl mb-10" data-aos="fade-up-left" data-aos-delay="80" data-aos-duration="2100">
               <div class="py-8 px-6 items-center text-center lg:items-start lg:text-start">
                 <span class="text-primary"><i class="fa-solid fa-gear w-8 h-8"></i></span>
                 <h3>
@@ -315,7 +317,7 @@
     <section id="contact" class="pt-36 pb-32">
       <div class="container">
         <div class="w-full px-4">
-          <div class="max-w-xl mx-auto text-center mb-16">
+          <div class="max-w-xl mx-auto text-center mb-16" data-aos="fade-up" data-aos-delay="50" data-aos-duration="2100">
             <p class="font-medium text-md text-grey"></p>
             <h4 class="font-semibold uppercase text-primary text-lg mb-2">Contact</h4>
             <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Hubungi Kami</h2>
@@ -323,7 +325,7 @@
           </div>
         </div>
         <form action="">
-          <div class="w-full lg:w-2/3 lg:mx-auto">
+          <div class="w-full lg:w-2/3 lg:mx-auto" data-aos="zoom-in-up" data-aos-delay="80" data-aos-duration="2100">
             <div class="w-full px-4 mb-8">
               <!-- <label for="name" class="text-base text-dark font-bold">Nama</label> -->
               <input type="text" name="name" id="name" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary" placeholder="Nama" />
@@ -436,6 +438,27 @@
       </div>
     </footer>
     <!-- Footer End -->
+
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        once: true,
+      });
+    </script>
+
+    <!-- GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/TextPlugin.min.js"></script>
+    <script>
+      gsap.registerPlugin(TextPlugin);
+      // gsap.to(".home h2 span", { duration: 2, delay: 1, text: "Programmer" });
+      gsap.from("header", { duration: 1.5, y: 0, opacity: 0, delay: 0.5 });
+      gsap.defaults({ ease: "none" });
+
+      const tl = gsap.timeline({ repeat: 4, repeatDelay: 1, yoyo: true });
+      tl.to(".home h2 span", { duration: 2, delay: 0.5, text: "Programmer" });
+    </script>
 
     <script src="dist/js/script.js"></script>
   </body>
